--- a/03_project_hotel/css/style.css
+++ b/03_project_hotel/css/style.css
@@ -9,6 +9,7 @@
 .container{
   max-width: 1300px;
   margin: auto;
+  padding: 0 20px;
 }
 
 .lead{
@@ -169,4 +170,33 @@ p {
 }
 #home-info #info-content p{
   padding-bottom: 20px;
+}
+
+
+#home-features{
+  height: 300px;
+  
+}
+
+.home-feature{
+  float: left;
+  width: 33%;
+  height: 100%;
+  padding: 40px 30px;
+  text-align: center;
+  overflow: hidden;
+}
+
+
+#home-footer{
+  width: 100%;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  
+}
+
+#home-footer p{
+  padding: 30px 0;
+  margin: 0 ;
 }
