--- a/03_project_hotel/css/style.css
+++ b/03_project_hotel/css/style.css
@@ -6,6 +6,9 @@
 }
 
 /* utilities */
+.clr{
+  clear: both;
+}
 .container{
   max-width: 1300px;
   margin: auto;
@@ -48,12 +51,12 @@
 
 .bg-dark{
   background-color: #333;
-  color: #fff;
+  color: #f4f4f4;
 }
 
 
 .bg-light{
-  background-color: #fff;
+  background-color: #f4f4f4;
   color: #333;
 }
 
@@ -172,7 +175,7 @@ p {
   padding-bottom: 20px;
 }
 
-
+/* features */
 #home-features{
   height: 300px;
   
@@ -180,23 +183,59 @@ p {
 
 .home-feature{
   float: left;
-  width: 33%;
+  width: 33.33%;
   height: 100%;
   padding: 40px 30px;
   text-align: center;
   overflow: hidden;
 }
 
+.home-feature i{
+  margin-bottom: 10px;
+}
 
+
+
+
+
+/* ABOUT PAGE */
+
+#about-info{
+  overflow: auto;
+  
+}
+#about-info #info-text{
+  float: left;
+  width: 50%;
+  
+}
+
+#about-info #info-picture{
+  float: right;
+  width: 50%;
+  min-height: 100%;
+  background: url('../img/photo-2.jpg') no-repeat center center/cover;
+  border-radius: 10px;
+  display: inline-block;
+  
+}
+
+
+
+
+ 
+/* footer */
 #home-footer{
-  width: 100%;
+
   text-align: center;
-  margin: 0;
-  padding: 0;
+  color: #fff;
+  padding: 30px 20px;
+  background-color: #444;
   
 }
 
 #home-footer p{
-  padding: 30px 0;
-  margin: 0 ;
+  margin: 0;
 }
+
+
