--- a/03_project_hotel/css/style.css
+++ b/03_project_hotel/css/style.css
@@ -23,6 +23,15 @@
   color: #F7C08A;
 }
 
+.text-light{
+  color: #f4f4f4;
+}
+
+.text-dark{
+  color: #333;
+}
+
+
 .btn-dark{
   color: #fff;
   background-color: #333;
@@ -65,6 +74,19 @@
   background-color: #F7C08A;
   color: #333;
 }
+
+.py-1{
+  padding: 10px 0;
+}
+
+.py-2{
+  padding: 20px 0;
+}
+
+.py-3{
+  padding: 30px 0;
+}
+
 
 /*main styling*/
 
@@ -198,6 +220,18 @@ p {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
 /* ABOUT PAGE */
 
 #about-info{
@@ -207,26 +241,69 @@ p {
 #about-info #info-text{
   float: left;
   width: 50%;
+  min-height: 100%;
   
 }
 
 #about-info #info-picture{
+ 
   float: right;
   width: 50%;
   min-height: 100%;
-  background: url('../img/photo-2.jpg') no-repeat center center/cover;
-  border-radius: 10px;
-  display: inline-block;
   
 }
 
+#about-info #info-picture img{
+  width: 70%;
+  display: block;
+  margin: auto;
+  border-radius: 60%;
+}
+
+
+#about-comments{
+  background: url('../img/test-bg.jpg') no-repeat center center /cover;
+  overflow: hidden;
+}
+
+#about-comments h1{
+  margin: 80px 50px 0 0 ;
+  font-size: 40px;
+  text-align: center;
+}
+#about-comments .about-guest {
+
+  padding: 20PX;
+  margin-bottom: 40px;
+  border-radius: 5px;
+  opacity: 0.9;
+  clear: both;
+  min-height: 140px;
+}
+
+
+#about-comments .about-guest img{
+  display: inline-block;
+  float: left;
+  border-radius: 50%;
+  width: 100px;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  margin-right: 20px;
+}
+
+#about-comments .about-guest .guest-comment{
+  font-size: 18px;
+
+}
 
 
 
  
 /* footer */
 #home-footer{
-
+  clear: both;
   text-align: center;
   color: #fff;
   padding: 30px 20px;
