--- a/03_project_hotel/css/style.css
+++ b/03_project_hotel/css/style.css
@@ -12,7 +12,7 @@
 .container{
   max-width: 1300px;
   margin: auto;
-  padding: 0 20px;
+  padding: 0px 100px;
 }
 
 .lead{
@@ -289,6 +289,7 @@ p {
   opacity: 0.9;
   clear: both;
   min-height: 140px;
+  min-width: 140px;
 }
 
 
