edgeledger: html css is done(no @media or JQuery yet)

--- a/04_edgeledger_website/css/style.css
+++ b/04_edgeledger_website/css/style.css
@@ -156,6 +156,7 @@ p {
   bottom: 0;
   background-color: rgba(0,0,0,0.4);
 }
+/* done again :) HBD ERFAN */
 
 /* Section: What We Do */
 #what .items {
