--- a/06_presentationWebsite/style.css
+++ b/06_presentationWebsite/style.css
@@ -12,7 +12,7 @@ body {
   color: #fff;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow: hidden;/*scroll bar hidden*/
 }
 
 /* Page Colors */
