--- a/06_presentationWebsite/style.css
+++ b/06_presentationWebsite/style.css
@@ -25,7 +25,8 @@ body {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  align-items: center;
+  align-items: center;/*very important thing i noticed:
+                        if you align items on the cross axis their width will becalculated as if they are inline-block elemets so the occupy exactly enough space and this way they would have space around them(along cross axis) thus they can be aligned along cross axis*/
   justify-content: center;
   text-align: center;
   padding: 0 4rem;
